changed 2 photos and removed star
reemoved star by changing the class name code still  in css

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 			<div class="row">
 				<div class="about-img">
 					<div class="img-box">
-						<div class="five-pointed-star"></div>
-						<img src="img/aboutme.jpeg" alt="about-me">
+						<div class="five-pointed-sta"></div>
+						<img src="img/about me.jpg" alt="about-me">
 					</div>
 				</div>
 				<div class="about-content">
@@ -495,30 +495,14 @@
 									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 									allowfullscreen></iframe>
 							</div>
-							<div class="video">
-								<iframe src="https://www.youtube.com/embed/s4RxyPeenGk" title="YouTube video player"
-									frameborder="0"
-									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-									allowfullscreen></iframe>
-							</div>
+							
 							<div class="video">
 								<iframe src="https://www.youtube.com/embed/jM6mi0fLGTI" title="YouTube video player"
 									frameborder="0"
 									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 									allowfullscreen></iframe>
 							</div>
-							<div class="video">
-								<iframe src="https://www.youtube.com/embed/gtX5NW3xadU" title="YouTube video player"
-									frameborder="0"
-									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-									allowfullscreen></iframe>
-							</div>
-							<div class="video">
-								<iframe src="https://www.youtube.com/embed/xwWEaY3uPSk" title="YouTube video player"
-									frameborder="0"
-									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-									allowfullscreen></iframe>
-							</div>
+		
 							<div class="video">
 								<iframe src="https://www.youtube.com/embed/B8K0ZIceL1w" title="YouTube video player"
 									frameborder="0"
