--- a/index.html
+++ b/index.html
@@ -331,14 +331,14 @@
 	<!-- Maple Production Start  -->
 
 
-	<section class="about-section" id="maple">
+	<section class="about-section" id="mapple">
 		<div class="container">
 			<div class="row">
 				<div class="section-title">
 					<h1>Mapple Production</h1>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row mapple-content">
 				<div class="maple-content">
 					<p>Welcome to Mapple Theatre !
 						<br>
@@ -354,6 +354,15 @@
 						Come, be a part of our Mapple family and let your talent shine under the spotlight.
 					</p>
 				</div>
+				<div class="about-img">
+					<div class="img-box">
+						<h2 style="text-align: center;">MEET OUR COACHES</h2>
+						<img src="img/about.jpg" alt="about-me">
+					</div>
+				</div>
+
+			</div>
+			<div class="row">
 				<div class="row align-center">
 					<div class="section-title">
 						<h1 id="subheading">Gallery</h1>
@@ -495,14 +504,14 @@
 									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 									allowfullscreen></iframe>
 							</div>
-							
+
 							<div class="video">
 								<iframe src="https://www.youtube.com/embed/jM6mi0fLGTI" title="YouTube video player"
 									frameborder="0"
 									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 									allowfullscreen></iframe>
 							</div>
-		
+
 							<div class="video">
 								<iframe src="https://www.youtube.com/embed/B8K0ZIceL1w" title="YouTube video player"
 									frameborder="0"
