--- a/index.html
+++ b/index.html
@@ -352,12 +352,22 @@
 						Theatre
 						is the perfect place to nurture your passion and hone your skills.
 						Come, be a part of our Mapple family and let your talent shine under the spotlight.
-					</p>
+					</p> 
+					<div>
+						<br>
+					 <h2>Meet the Mentors</h2>
+                      <p>Meet the exceptional Founder & Mentors behind our renowned Group. Embarking on this extraordinary journey our mentors found their passion for the performing arts when they were young dreamers.Over the years, they nurtured their talents, practiced their skills, and in addition to their expertise in acting, directing, writing, and theatre, they also possess fair experience in casting, skilfully selecting talents that breathe life into their creative visions are now working together towards a shared vision.After successfully conducting more than 65+ workshops Individually & Together in the renowned Casting Agency, Institutes, Schools, Colleges they are now embarked on a new journey opening a Theatre group expertly guiding aspiring Performers, shaping their raw talent into captivating performances.Come and be a part of this creative sanctuary, where the energy of youth and the knowledge of experience come together, led by <a href="https://www.instagram.com/john.abhishek/"><b>Abhishek John </b></a> and <a href="https://www.instagram.com/beingrumani/"><b>Rumani Takkar</b></a>.
+			          </p>
+					</div>
 				</div>
 				<div class="about-img">
+					<br>
+					<br>
+					<br>
 					<div class="img-box">
-						<h2 style="text-align: center;">MEET OUR COACHES</h2>
 						<img src="img/about.jpg" alt="about-me">
+					    <p style="margin:0;display:inline;float:left">Abhishek John</p>
+                        <p style="margin:0;display:inline;float:right" >Rumani Takkar</p>
 					</div>
 				</div>
 
@@ -475,19 +485,7 @@
 
 						<div class="owl-carousel2">
 							<div class="video">
-								<iframe src="https://www.youtube.com/embed/eJykzVmey30" title="YouTube video player"
-									frameborder="0"
-									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-									allowfullscreen></iframe>
-							</div>
-							<div class="video">
 								<iframe src="https://www.youtube.com/embed/PnsPerBMPG4" title="YouTube video player"
-									frameborder="0"
-									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-									allowfullscreen></iframe>
-							</div>
-							<div class="video">
-								<iframe src="https://www.youtube.com/embed/v2pFzOJnkrU" title="YouTube video player"
 									frameborder="0"
 									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 									allowfullscreen></iframe>
