Video Feature Added

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<title>Abhishek John</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" href="./css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
 </head>
 
 <body>
+
 
 	<!-- Preloader Start  -->
 
@@ -18,6 +18,15 @@
 	</div>
 
 	<!-- Preloader End -->
+
+	<!-- Modal Start  -->
+
+	<div class="modal">
+		<span class="close">&times;</span>
+		<iframe class="video-iframe" loading="lazy" src="" frameborder="0" allowfullscreen></iframe>
+	</div>
+
+	<!-- Modal End  -->
 
 	<section class="navigation">
 		<div class="nav-container">
@@ -376,7 +385,7 @@
 				<div class="work-item">
 					<h2 style="text-align: center;">Production</h2>
 					<div class="work-item-inner">
-						<img id="in_change_first" src="img/casting.jpeg" data-large="img/maple/m2.jpg" alt="work">
+						<img id="in_change_first" src="img/casting.jpg" data-large="img/maple/m2.jpg" alt="work">
 						<div class="overlay">
 							<h4>Cashless</h4>
 						</div>
@@ -401,6 +410,9 @@
 
 	<!-- Work Section End  -->
 
+
+
+
 	<!-- Project and Video Carousel Start  -->
 
 	<section class="about-section" id="project">
@@ -413,31 +425,22 @@
 			<section id="slider">
 				<div class="container">
 					<div class="row">
-
-						<div class="owl-carousel">
-							<div class="video">
-								<iframe src="https://www.youtube.com/embed/8flzile9Uhs" title="YouTube video player"
-									frameborder="0"
-									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-									allowfullscreen></iframe>
+						<div class="owl-carousel screenshots-carousel">
+							<div class="screenshot-item">
+								<img class="modal-img" src="img/workshop/1.jpeg"
+									video="https://www.youtube.com/embed/8flzile9Uhs" alt="screenshot">
 							</div>
-							<div class="video">
-								<iframe src="https://www.youtube.com/embed/BcscPx6b5_8" title="YouTube video player"
-									frameborder="0"
-									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-									allowfullscreen></iframe>
+							<div class="screenshot-item">
+								<img class="modal-img" src="img/workshop/2.jpg"
+									video="https://www.youtube.com/embed/BcscPx6b5_8" alt="screenshot">
 							</div>
-							<div class="video">
-								<iframe src="https://www.youtube.com/embed/nPxxnSTsjw0" title="YouTube video player"
-									frameborder="0"
-									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-									allowfullscreen></iframe>
+							<div class="screenshot-item">
+								<img class="modal-img" src="img/workshop/3.jpg"
+									video="https://www.youtube.com/embed/nPxxnSTsjw0" alt="screenshot">
 							</div>
-							<div class="video">
-								<iframe src="https://www.youtube.com/embed/S37kL1tGhM8" title="YouTube video player"
-									frameborder="0"
-									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-									allowfullscreen></iframe>
+							<div class="screenshot-item">
+								<img class="modal-img" src="img/workshop/4.jpg"
+									video="https://www.youtube.com/embed/S37kL1tGhM8" alt="screenshot">
 							</div>
 						</div>
 					</div>
@@ -464,53 +467,37 @@
 				<div class="container">
 					<div class="row">
 
-						<div class="owl-carousel2">
-							<div class="video">
-								<iframe src="https://www.youtube.com/embed/eJykzVmey30" title="YouTube video player"
-									frameborder="0"
-									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-									allowfullscreen></iframe>
+						<div class="owl-carousel auditions-carousel">
+							<div class="screenshot-item">
+								<img class="modal-img" src="img/workshop/1.jpeg"
+									video="https://www.youtube.com/embed/eJykzVmey30" alt="screenshot">
 							</div>
-							<div class="video">
-								<iframe src="https://www.youtube.com/embed/PnsPerBMPG4" title="YouTube video player"
-									frameborder="0"
-									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-									allowfullscreen></iframe>
+							<div class="screenshot-item">
+								<img class="modal-img" src="img/workshop/2.jpg"
+									video="https://www.youtube.com/embed/PnsPerBMPG4" alt="screenshot">
 							</div>
-							<div class="video">
-								<iframe src="https://www.youtube.com/embed/v2pFzOJnkrU" title="YouTube video player"
-									frameborder="0"
-									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-									allowfullscreen></iframe>
+							<div class="screenshot-item">
+								<img class="modal-img" src="img/workshop/3.jpg"
+									video="https://www.youtube.com/embed/v2pFzOJnkrU" alt="screenshot">
 							</div>
-							<div class="video">
-								<iframe src="https://www.youtube.com/embed/nnQ9XXihYfE" title="YouTube video player"
-									frameborder="0"
-									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-									allowfullscreen></iframe>
+							<div class="screenshot-item">
+								<img class="modal-img" src="img/workshop/4.jpg"
+									video="https://www.youtube.com/embed/nnQ9XXihYfE" alt="screenshot">
 							</div>
-							<div class="video">
-								<iframe src="https://www.youtube.com/embed/qvfd-A3Vz44" title="YouTube video player"
-									frameborder="0"
-									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-									allowfullscreen></iframe>
+							<div class="screenshot-item">
+								<img class="modal-img" src="img/workshop/4.jpg"
+									video="https://www.youtube.com/embed/qvfd-A3Vz44" alt="screenshot">
 							</div>
-							
-							<div class="video">
-								<iframe src="https://www.youtube.com/embed/jM6mi0fLGTI" title="YouTube video player"
-									frameborder="0"
-									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-									allowfullscreen></iframe>
+							<div class="screenshot-item">
+								<img class="modal-img" src="img/workshop/4.jpg"
+									video="https://www.youtube.com/embed/jM6mi0fLGTI" alt="screenshot">
 							</div>
-		
-							<div class="video">
-								<iframe src="https://www.youtube.com/embed/B8K0ZIceL1w" title="YouTube video player"
-									frameborder="0"
-									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-									allowfullscreen></iframe>
+							<div class="screenshot-item">
+								<img class="modal-img" src="img/workshop/4.jpg"
+									video="https://www.youtube.com/embed/B8K0ZIceL1w" alt="screenshot">
 							</div>
-
 						</div>
+
 					</div>
 			</section>
 		</div>
@@ -612,73 +599,8 @@
 	<p class="copyright">&copy; 2023 - Abhishek John</p>
 
 	<script src="js/jquery.min.js"></script>
+	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/main.js"></script>
-	<script src="./js/owl.carousel.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js5"></script>
-
-	<!--carousel script-->
-
-	<script>
-		var owl = $('.owl-carousel');
-		owl.owlCarousel({
-			loop: true,
-			nav: true,
-			margin: 1,
-			responsive: {
-				0: {
-					items: 1
-				},
-				600: {
-					items: 2
-				},
-				960: {
-					items: 2
-				},
-				1200: {
-					items: 3
-				}
-			}
-		});
-		owl.on('mousewheel', '.owl-stage', function (e) {
-			if (e.deltaY > 0) {
-				owl.trigger('next.owl');
-			} else {
-				owl.trigger('prev.owl');
-			}
-			e.preventDefault();
-		});
-
-
-
-		var owll = $('.owl-carousel2');
-		owll.owlCarousel({
-			loop: true,
-			nav: true,
-			margin: 10,
-			responsive: {
-				0: {
-					items: 1
-				},
-				600: {
-					items: 2
-				},
-				900: {
-					items: 3
-				},
-				1200: {
-					items: 4
-				}
-			}
-		});
-		owll.on('mousewheel', '.owl-stage', function (e) {
-			if (e.deltaY > 0) {
-				owll.trigger('next.owl');
-			} else {
-				owll.trigger('prev.owl');
-			}
-			e.preventDefault();
-		}); 
-	</script>
 
 </body>
 
