--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 				<div class="work-item">
 					<h2 style="text-align: center;">Production</h2>
 					<div class="work-item-inner">
-						<img id="in_change_first" src="img/casting.jpg" data-large="img/maple/m2.jpg" alt="work">
+						<img id="in_change_first" src="img/maple/m2.jpeg" alt="work">
 						<div class="overlay">
 							<h4>Cashless</h4>
 						</div>
@@ -396,7 +396,7 @@
 				<div class="work-item">
 					<h2 style="text-align: center">Rehearsals</h2>
 					<div class="work-item-inner">
-						<img id="in_change_second" src="img/maple/m3.jpeg" data-large="img/maple/m3.jpg" alt="work">
+						<img id="in_change_second" src="img/maple/6.jpg" alt="work">
 						<div class="overlay">
 							<h4>Cashless</h4>
 						</div>
@@ -427,19 +427,19 @@
 					<div class="row">
 						<div class="owl-carousel screenshots-carousel">
 							<div class="screenshot-item">
-								<img class="modal-img" src="img/workshop/1.jpeg"
+								<img class="modal-img" src="https://img.youtube.com/vi/8flzile9Uhs/0.jpg"
 									video="https://www.youtube.com/embed/8flzile9Uhs" alt="screenshot">
 							</div>
 							<div class="screenshot-item">
-								<img class="modal-img" src="img/workshop/2.jpg"
+								<img class="modal-img" src="https://img.youtube.com/vi/BcscPx6b5_8/0.jpg"
 									video="https://www.youtube.com/embed/BcscPx6b5_8" alt="screenshot">
 							</div>
 							<div class="screenshot-item">
-								<img class="modal-img" src="img/workshop/3.jpg"
+								<img class="modal-img" src="https://img.youtube.com/vi/nPxxnSTsjw0/0.jpg"
 									video="https://www.youtube.com/embed/nPxxnSTsjw0" alt="screenshot">
 							</div>
 							<div class="screenshot-item">
-								<img class="modal-img" src="img/workshop/4.jpg"
+								<img class="modal-img" src="https://img.youtube.com/vi/S37kL1tGhM8/0.jpg"
 									video="https://www.youtube.com/embed/S37kL1tGhM8" alt="screenshot">
 							</div>
 						</div>
@@ -469,31 +469,31 @@
 
 						<div class="owl-carousel auditions-carousel">
 							<div class="screenshot-item">
-								<img class="modal-img" src="img/workshop/1.jpeg"
+								<img class="modal-img" src="https://img.youtube.com/vi/eJykzVmey30/0.jpg"
 									video="https://www.youtube.com/embed/eJykzVmey30" alt="screenshot">
 							</div>
 							<div class="screenshot-item">
-								<img class="modal-img" src="img/workshop/2.jpg"
+								<img class="modal-img" src="https://img.youtube.com/vi/PnsPerBMPG4/0.jpg"
 									video="https://www.youtube.com/embed/PnsPerBMPG4" alt="screenshot">
 							</div>
 							<div class="screenshot-item">
-								<img class="modal-img" src="img/workshop/3.jpg"
+								<img class="modal-img" src="https://img.youtube.com/vi/v2pFzOJnkrU/0.jpg"
 									video="https://www.youtube.com/embed/v2pFzOJnkrU" alt="screenshot">
 							</div>
 							<div class="screenshot-item">
-								<img class="modal-img" src="img/workshop/4.jpg"
+								<img class="modal-img" src="https://img.youtube.com/vi/nnQ9XXihYfE/0.jpg"
 									video="https://www.youtube.com/embed/nnQ9XXihYfE" alt="screenshot">
 							</div>
 							<div class="screenshot-item">
-								<img class="modal-img" src="img/workshop/4.jpg"
+								<img class="modal-img" src="https://img.youtube.com/vi/qvfd-A3Vz44/0.jpg"
 									video="https://www.youtube.com/embed/qvfd-A3Vz44" alt="screenshot">
 							</div>
 							<div class="screenshot-item">
-								<img class="modal-img" src="img/workshop/4.jpg"
+								<img class="modal-img" src="https://img.youtube.com/vi/jM6mi0fLGTI/0.jpg"
 									video="https://www.youtube.com/embed/jM6mi0fLGTI" alt="screenshot">
 							</div>
 							<div class="screenshot-item">
-								<img class="modal-img" src="img/workshop/4.jpg"
+								<img class="modal-img" src="https://img.youtube.com/vi/B8K0ZIceL1w/0.jpg"
 									video="https://www.youtube.com/embed/B8K0ZIceL1w" alt="screenshot">
 							</div>
 						</div>
