mapple redirection added

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 	<!-- Maple Production Start  -->
 
 
-	<section class="about-section" id="maple">
+	<section class="about-section" id="mapple">
 		<div class="container">
 			<div class="row">
 				<div class="section-title">
