--- a/index.html
+++ b/index.html
@@ -387,8 +387,6 @@
 					<br>
 					<div class="img-box">
 						<img src="img/mentor.jpg" alt="mentors">
-						<p style="margin:0;display:inline;float:left">Abhishek John</p>
-						<p style="margin:0;display:inline;float:right">Rumani Takkar</p>
 					</div>
 				</div>
 
@@ -593,7 +591,7 @@
 							<!-- info item start  -->
 							<div class="info-item">
 								<h5>Address</h5>
-								<p>Kalka ji, New Delhi, 110019</p>
+								<p>Kalkaji, New Delhi, 110019</p>
 							</div>
 							<!-- info item end  -->
 							<!-- info item start  -->
@@ -615,7 +613,7 @@
 					<div class="social-links">
 						<!--<a href="#" title="facebook"><img src="img/icons/facebook.svg" alt="facebook"></a>
 					<a href="#" title="twitter"><img src="img/icons/twitter.svg" alt="twitter"></a> -->
-						<a href="#" title="linkedin"><img src="img/icons/linkedin.svg" alt="linkedin"></a>
+						<!-- <a href="#" title="linkedin"><img src="img/icons/linkedin.svg" alt="linkedin"></a> -->
 						<a href="https://www.instagram.com/john.abhishek/" title="instagram"><img
 								src="img/icons/instagram.svg" alt="instagram"></a>
 					</div>
