updated paragraph texs

--- a/index.html
+++ b/index.html
@@ -119,23 +119,15 @@
 							<h1 id="subheading">Actor</h1>
 						</div>
 					</div>
-					<p>Welcome to my world of imagination and artistry! I am Abhishek John, an actor driven by the
-						passion
-						for storytelling and the boundless possibilities it offers. This website is your backstage pass
-						into my creative universe, where I embrace the magic of the stage and screen.
+					<p>Welcome to my world of imagination and artistry! I am Abhishek John, an actor driven by the passion for storytelling and the boundless possibilities it offers. This website is your backstage pass into my creative universe, where I embrace the magic of the stage and screen.</p>
+ 						<br><p>From my very first encounter with the spotlight, I knew that this was my calling. Here, you'll find a collection of my performances, ranging from theater productions to on-screen portrayals. Each role I undertake is an opportunity for growth. 
+						</p>
+                        <br><p>				 
+						Whether you're a fellow enthusiast of the performing arts, a casting director seeking the perfect fit, or someone who simply loves a good story, I invite you to join me on this creative expedition. Together, let us celebrate the magic of acting and the transformative power of storytelling.
+						</p>
 						<br>
-						From my very first encounter with the spotlight, I knew that this is my thing.
-						Here, you'll find a collection of my performances, ranging from theater productions to on-screen
-						portrayals. Each role I undertake is an opportunity for growth.
-						Whether you're a fellow enthusiast of the performing arts, a casting director seeking the
-						perfect fit, or someone who simply loves a good story, I invite you to join me on this creative
-						expedition. Together, let us celebrate the magic of acting and the transformative power of
-						storytelling.
-						<br>
-						<br>
-						LIGHTS CAMERA ACTION!!
+						<p><b>LIGHTS, CAMERA, ACTION!! </b>
 					</p>
-
 					<!-- contact button  -->
 					<a href="#project" class="btn btn-01">Project </a>
 					<a href="#audition" class="btn btn-01">Auditions </a>
@@ -165,25 +157,24 @@
 							<h1 id="subheading">Acting Workshop</h1>
 						</div>
 					</div>
-					<p><b>For Aspiring Actors & creative souls.</b></p>
-					<p>Welcome to our Acting Workshop, where me & my fellow experienced & prodigious Acting
-						Facilitator,<b>Rumani Takkar</b>. Share our Skills & experiences with you.we'll unlock your
-						creative potential, refine your skills, and explore the art of authentic expression.</p>
-					<p>We have been Giving Acting workshops through <b>DM STARS INDIA</b> a casting and modelling
-						agency,<b>Moonlight Film & Television Institute</b>,<b>Take one school of Mass
-							communication</b>,<b>Live wires Media Institute</b>,<b>Black Pearl Theater</b> and
-						Independently.
-					</p>
-					<p>Whether you're a beginner, eager to explore the world of acting or an experienced performer
-						seeking to sharpen your skills, our workshop offers an inspiring and supportive environment for
-						all.</p>
-					<p>Together, we'll dive into the art of storytelling, character development, improvisation, and so
-						much more.
-						our aim is to help you unlock your full potential and build the confidence to shine on any
-						stage,meet like-minded individuals, and become part of our passionate community of actors.</p>
-					<p>Let's shine on the stage together!</p>
-					<p>Enroll Now!!
-					</p>
+					<p><b>For Aspiring Actors & Creative Souls.</b></p>
+                      <br>
+					  <p>
+						Welcome to our Acting Workshop, where me and my fellow experienced and prodigious acting facilitator share our skills and experiences with you. We'll unlock your creative potential, refine your skills, and explore the art of authentic expression.
+						</p>
+						<br>
+						<p>We have been giving acting workshops through <b>DM STARS INDIA</b>, a casting and modelling agency, <b>Moonlight Film & Television Institute, Take One School of Mass Communication, Live Wires Media Institute, Black Pearl Theater</b> and independently by ourselves.
+						 </p>
+						 <br>
+						<P>
+						Whether you're a beginner, eager explorer of the world of acting or an experienced performer seeking to sharpen your skills, our workshop offers an inspiring and supportive environment for all.
+						</P>
+						<br>
+						<p>Together, we'll dive into the art of storytelling, character development, improvisation, and so much more. Our aim is to help you unlock your full potential and build the confidence to shine on the stage, meet like-minded individuals and become part of our passionate community of actors.
+						</p>
+						<br>
+						<p>Let's shine on the stage together!
+						</p> 
 					<a href="#contact" class="btn btn-01">Enroll Now </a>
 				</div>
 			</div>
@@ -294,15 +285,18 @@
 						</div>
 					</div>
 					<p><b>For Productions House & Independent Film makers.</b></p>
-					<p>I am a seasoned casting director with a keen eye for talent and a passion for bringing stories to
-						life.. This started as just a livelihood option but soon turned into something i enjoy. I have
-						mentioned few Projects for which i have worked as casting Associate/Director for your reference.
-						Let's work together to make unforgettable performances happen.
+					<BR>
+					<p>I am a seasoned casting director with a keen eye for talent and a passion for bringing stories to life. This started just as a livelihood option but soon turned into something that I enjoyed. I have mentioned few projects on which I have worked as casting associate/director for your reference. Let's work together to make unforgettable performances happen.
 					</p>
+					<BR>
 					<p>
-						Recent Casting Projects- Short film "The Space in Between", "The Mysterious Lift", Digital Ads
-						"HK Vitals", "Kennel Kitchen", "Otrivin".
+						<b>Recent Casting Projects-</b><BR>
+
+                       Short film: "The Space in Between", "The Mysterious Lift"
+                        <BR>
+                        Digital Ads: "HK Vitals", "Kennel Kitchen", "Otrivin"
 					</p>
+					<br>
 					<div class="stats">
 						<div class="row">
 							<div class="stat-box">
@@ -352,30 +346,27 @@
 					<p>Welcome to Mapple Theatre !
 						<br>
 						<br>
-						At Mapple Theatre, we believe in the power of storytelling to inspire, entertain, and touch
-						hearts. Join us on an enchanting journey as we bring tales from the pages to the stage, creating
-						magical moments that will stay with you forever.
+						At Mapple Theatre, we believe in the power of storytelling to inspire, entertain, and touch hearts. Join us on an enchanting journey as we bring tales from the pages to the stage that create magical moments that will stay with you forever.
 						<br>
-						As a vibrant and dynamic theater community, we welcome actors, directors, writers, and theater
-						enthusiasts of all levels. Whether you're an aspiring actor or a seasoned performer, Mapple
-						Theatre
-						is the perfect place to nurture your passion and hone your skills.
-						Come, be a part of our Mapple family and let your talent shine under the spotlight.
-					</p>
-					<div>
+						As a vibrant and dynamic theater community, we welcome actors, directors, writers, and theater enthusiasts of all levels. Whether you're an aspiring actor or a seasoned performer, Mapple Theatre is the perfect place to nurture your passion and hone your skills.<br> </p>
+					     <p>Come, be a part of our Mapple family and let your talent shine under the spotlight.</p>
+						 <div>
 						<br>
 						<h2>Meet the Mentors</h2>
-						<p>Meet the exceptional Founder & Mentors behind our renowned Group. Embarking on this
-							extraordinary journey our mentors found their passion for the performing arts when they were
-							young dreamers.Over the years, they nurtured their talents, practiced their skills, and in
-							addition to their expertise in acting, directing, writing, and theatre, they also possess
-							fair experience in casting, skilfully selecting talents that breathe life into their
-							creative visions are now working together towards a shared vision.After successfully
-							conducting more than 65+ workshops Individually & Together in the renowned Casting Agency,
-							Institutes, Schools, Colleges they are now embarked on a new journey opening a Theatre group
-							expertly guiding aspiring Performers, shaping their raw talent into captivating
-							performances.Come and be a part of this creative sanctuary, where the energy of youth and
-							the knowledge of experience come together, led by <a
+						<br>
+						<p>Meet the exceptional Founder & Mentors behind our renowned Group. Embarking on this extraordinary journey our mentors found their passion for the performing arts when they were young dreamers. 
+                            </p>
+							<br>
+                            <p> 
+							Over the years, they have nurtured their talents, practiced their skills and are experts in acting, directing and writing. They now possess fair experience in casting and skillfully selecting talents that breathe life into their creative visions. They are now working together towards a shared vision together. 
+							</p>
+							 <br>
+							<p>
+							After successfully conducting more than 65+ workshops individually and as a team in the renowned casting agencies, institutes, schools and colleges, they are now embark on a new journey opening a theatre group and expertly guiding aspiring performers while shaping their raw talent into captivating performances. 
+							</p>
+							<br>
+							<p>
+							Come and be a part of this creative sanctuary where the energy of youth and the knowledge of experience come together led by  <a
 								href="https://www.instagram.com/john.abhishek/"><b>Abhishek John </b></a> and <a
 								href="https://www.instagram.com/beingrumani/"><b>Rumani Takkar</b></a>.
 						</p>
@@ -387,8 +378,6 @@
 					<br>
 					<div class="img-box">
 						<img src="img/mentor.jpg" alt="mentors">
-						<p style="margin:0;display:inline;float:left">Abhishek John</p>
-						<p style="margin:0;display:inline;float:right">Rumani Takkar</p>
 					</div>
 				</div>
 
@@ -593,7 +582,7 @@
 							<!-- info item start  -->
 							<div class="info-item">
 								<h5>Address</h5>
-								<p>Kalka ji, New Delhi, 110019</p>
+								<p>Kalkaji, New Delhi, 110019</p>
 							</div>
 							<!-- info item end  -->
 							<!-- info item start  -->
@@ -615,7 +604,7 @@
 					<div class="social-links">
 						<!--<a href="#" title="facebook"><img src="img/icons/facebook.svg" alt="facebook"></a>
 					<a href="#" title="twitter"><img src="img/icons/twitter.svg" alt="twitter"></a> -->
-						<a href="#" title="linkedin"><img src="img/icons/linkedin.svg" alt="linkedin"></a>
+						<!-- <a href="#" title="linkedin"><img src="img/icons/linkedin.svg" alt="linkedin"></a> -->
 						<a href="https://www.instagram.com/john.abhishek/" title="instagram"><img
 								src="img/icons/instagram.svg" alt="instagram"></a>
 					</div>
