--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <html>
 
 <head>
@@ -126,7 +126,7 @@
 						Whether you're a fellow enthusiast of the performing arts, a casting director seeking the perfect fit, or someone who simply loves a good story, I invite you to join me on this creative expedition. Together, let us celebrate the magic of acting and the transformative power of storytelling.
 						</p>
 						<br>
-						<p><b>LIGHTS, CAMERA, ACTION!! </b>
+						<p><b>LIGHTS, CAMERA, ACTION!</b>
 					</p>
 					<!-- contact button  -->
 					<a href="#project" class="btn btn-01">Project </a>
