--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-a<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -347,6 +347,7 @@ a<!DOCTYPE html>
 						<br>
 						<br>
 						At Mapple Theatre, we believe in the power of storytelling to inspire, entertain, and touch hearts. Join us on an enchanting journey as we bring tales from the pages to the stage that create magical moments that will stay with you forever.
+						<br>
 						<br>
 						As a vibrant and dynamic theater community, we welcome actors, directors, writers, and theater enthusiasts of all levels. Whether you're an aspiring actor or a seasoned performer, Mapple Theatre is the perfect place to nurture your passion and hone your skills.<br> </p>
 					     <p>Come, be a part of our Mapple family and let your talent shine under the spotlight.</p>
